logs/haufe.hrs.configuration.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cfgparse-1.3.egg-info'...
Compiling './lib/python3.5/site-packages/cfgparse.py'...
***   File "./lib/python3.5/site-packages/cfgparse.py", line 143
    raise NotImplementedError, "subclasses must implement"
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/haufe'...
Listing './lib/python3.5/site-packages/haufe/hrs'...
Listing './lib/python3.5/site-packages/haufe/hrs/configuration'...
Compiling './lib/python3.5/site-packages/haufe/hrs/configuration/demo.py'...
***   File "./lib/python3.5/site-packages/haufe/hrs/configuration/demo.py", line 21
    print OL.get('adb2version')
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/haufe/hrs/configuration/demo2_notify.py'...
***   File "./lib/python3.5/site-packages/haufe/hrs/configuration/demo2_notify.py", line 18
    print service.getConfiguration()
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/haufe/hrs/configuration/example'...
Listing './lib/python3.5/site-packages/haufe/hrs/configuration/example/model'...
Listing './lib/python3.5/site-packages/haufe/hrs/configuration/example/sample_config'...
Compiling './lib/python3.5/site-packages/haufe/hrs/configuration/service.py'...
***   File "./lib/python3.5/site-packages/haufe/hrs/configuration/service.py", line 105
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/haufe/hrs/configuration/tests'...
Listing './lib/python3.5/site-packages/haufe.hrs.configuration-0.5.18.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/component'...
Listing './lib/python3.5/site-packages/zope/component/testfiles'...
Listing './lib/python3.5/site-packages/zope/component/tests'...
Listing './lib/python3.5/site-packages/zope/configuration'...
Listing './lib/python3.5/site-packages/zope/configuration/tests'...
Listing './lib/python3.5/site-packages/zope/configuration/tests/excludedemo'...
Listing './lib/python3.5/site-packages/zope/configuration/tests/excludedemo/sub'...
Listing './lib/python3.5/site-packages/zope/configuration/tests/samplepackage'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/i18nmessageid'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/schema'...
Listing './lib/python3.5/site-packages/zope/schema/tests'...
Listing './lib/python3.5/site-packages/zope.component-4.4.1.dist-info'...
Listing './lib/python3.5/site-packages/zope.configuration-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.i18nmessageid-4.1.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.schema-4.5.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
